# ScrapingSetup

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  ai_doc.md  config.json
.github/workflows/: build-and-push.yml
src/: config.rs  main.rs  storage.rs  uploader.rs
