[package]
name = "scraping_service"
version = "0.1.0"
edition = "2021"

[dependencies]
ve_energy_scrapers = { git = "https://github.com/VigenEnergy/ve_energy_scrapers" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
csv = "1.3"
parquet = "53.0"
arrow = "53.0"
chrono-tz = "0.9"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15"
